[project]
name = "unienv"
version = "0.0.1a"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "gymnasium>=0.29.0",
    "pydlpack",
    "array-api-compat",
    "packaging",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tqdm"
]
torch = [
    "torch"
]
jax = [
    "jax"
]
mujoco = [
    "mujoco>=3.0",
    "dm_control>=1.0",
    "mink>=0.0.5"
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["training*", "tests*"]