[project]
name = "unienv"
version = "0.0.1a1"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "gymnasium>=0.29.0",
    "pydlpack",
    "array-api-compat",
    "packaging",
    "pillow",
]

[project.optional-dependencies]
video = [
    "moviepy>=1.0.3"
]
dev = [
    "pytest",
    "tqdm",
]
torch = [
    "torch"
]
jax = [
    "jax"
]
mujoco = [
    "mujoco>=3.0",
    "dm_control>=1.0",
    "mink>=0.0.5"
]
mjx = [
    "mujoco-mjx>=3.0",
    "flax",
    "jax"
]
maniskill = [
    "mani_skill>=3.0.0b12",
    "torch"
]
data = [
    "torchrl >= 0.6.0",
    "tensordict >= 0.6.2",
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["training*", "tests*"]